Add .calltoaction a for style demo button

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -162,7 +162,7 @@ input
 
 }
 
-button 
+/* button 
 {
     display: block;
     margin-top: 10px;
@@ -173,6 +173,22 @@ button
     width: 150px;
     margin: auto;
     font-size: 40px;
+} */
+
+.calltoaction a
+{
+    display: block;
+    margin-top: 10px;
+    background: transparent;
+    /* color: #000000; */
+    padding: 10px 0px;
+    color: #ffffff;
+    border: 3px solid ;
+    border-radius: 100px;
+    width: 150px;
+    margin: auto;
+    font-weight: 600;
+    text-align: center;
 }
 
 .footer
